--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # File that contains the name of project contributors
 
-Akanmu Ibrahim <akanmuibro@gmail.com>
-Abdelrhman Fikri <Abdelrhmanfikri182017@gmail.com>
+Akanmu Ibrahim <akanmuibro@gmail.com>              | Github: timileyin42
+Abdelrhman Fikri <Abdelrhmanfikri182017@gmail.com> | Github: abdelrhman2148
